got the labels showing for the pie chart but the text is way too big and not positioned so need to fix that and make them work with the hover on each slice

--- a/static/styles.css
+++ b/static/styles.css
@@ -135,7 +135,7 @@ rect {
   left: 50vw;
 }
 
-.pie-slice :hover {
+.pie-chart :hover {
   fill: yellow;
 }
 
@@ -148,5 +148,5 @@ rect {
 .pie-chart-text {
   color: white;
   font-family: var(--myFont);
-  font-size: xx-large;
+  font-size: xx-small;
 }
